--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,8 @@ body {
 
 .hero-section {
     min-height: 100vh;
-    background: linear-gradient(45deg, #74b9ff, #0984e3);
+    /* background: linear-gradient(45deg, #2d3436, #5b5e5f); */
+    background: black;
     color: white;
     position: relative;
     overflow: hidden;
@@ -89,7 +90,7 @@ body {
 
 /* Fixed size for project cards */
 .project-card {
-    height: 400px;
+    height: 450px;
     display: flex;
     flex-direction: column;
     border: none;
@@ -113,7 +114,7 @@ body {
 
 .project-card .card-body .card-text {
     display: -webkit-box;
-    -webkit-line-clamp: 4;
+    -webkit-line-clamp: 5;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
